Fix invisible footer links on hover

--- a/site/_sass/_styles.scss
+++ b/site/_sass/_styles.scss
@@ -74,6 +74,11 @@ body > footer {
 
   a {
     color: var(--pico-color-slate-200);
+
+    &:hover {
+      background-color: transparent;
+      color: white;
+    }
   }
 }
 
